--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -22,7 +22,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from distutils.core import setup\n",
+    "from distutils.extension import Extension\n",
+    "from Cython.Build import cythonize\n",
+    "from Cython.Distutils import build_ext\n",
+    "\n",
+    "#ext = Extension('glesLFR', sources=[\"glesLFRPyth.pyx\",\"src\\glesLFR.cpp\",\"src\\LFGenerator.cpp\",\"src\\stb_image.cpp\",\"src\\glad.c\"], language=\"c++\",)\n",
+    "\n",
+    "#setup(name=\"glesLFR\", ext_modules = cythonize([ext]),cmdclass = {'build_ext': build_ext})\n",
+    "\n",
+    "# Building\n",
+    "setup(\n",
+    "    cmdclass = {'build_ext': build_ext},\n",
+    "    ext_modules = [\n",
+    "    Extension(\"glesLFR_Indrajit\", \n",
+    "              sources=[\"glesLFR_Indrajit_Pyth.pyx\",\"glad.c\",\"stb_image.cpp\"],\n",
+    "              libraries=[\"glfw3\",\"assimp\",],\n",
+    "              language=\"c++\",\n",
+    "              extra_compile_args=[\"-Wall\",\"-Wextra\", \"-std=c++17\", \"-ggdb\", \"-lpthread\",\"-I/home/pi/PyBindTest/TestMainFunDecomp/glesLFR/include/\",\"-L../lib/\",\"-llibassimp.so.5\"],\n",
+    "              extra_link_args=[\"-L../lib/\"]\n",
+    "              )\n",
+    "    ]\n",
+    ")          "
+   ]
   },
   {
    "cell_type": "code",
