--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -1,148 +1,160 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": 3
+    },
+    "orig_nbformat": 2,
+    "colab": {
+      "name": "TryPyCLFR_Colab.ipynb",
+      "provenance": []
+    }
   },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from distutils.core import setup\n",
-    "from distutils.extension import Extension\n",
-    "from Cython.Build import cythonize\n",
-    "from Cython.Distutils import build_ext\n",
-    "\n",
-    "#ext = Extension('glesLFR', sources=[\"glesLFRPyth.pyx\",\"src\\glesLFR.cpp\",\"src\\LFGenerator.cpp\",\"src\\stb_image.cpp\",\"src\\glad.c\"], language=\"c++\",)\n",
-    "\n",
-    "#setup(name=\"glesLFR\", ext_modules = cythonize([ext]),cmdclass = {'build_ext': build_ext})\n",
-    "\n",
-    "# Building\n",
-    "setup(\n",
-    "    cmdclass = {'build_ext': build_ext},\n",
-    "    ext_modules = [\n",
-    "    Extension(\"glesLFR_Indrajit\", \n",
-    "              sources=[\"glesLFR_Indrajit_Pyth.pyx\",\"glad.c\",\"stb_image.cpp\"],\n",
-    "              libraries=[\"glfw3\",\"assimp\",],\n",
-    "              language=\"c++\",\n",
-    "              extra_compile_args=[\"-Wall\",\"-Wextra\", \"-std=c++17\", \"-ggdb\", \"-lpthread\",\"-I/home/pi/PyBindTest/TestMainFunDecomp/glesLFR/include/\",\"-L../lib/\",\"-llibassimp.so.5\"],\n",
-    "              extra_link_args=[\"-L../lib/\"]\n",
-    "              )\n",
-    "    ]\n",
-    ")          "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('ProgramStarted')\n",
-    "import glesLFR_Indrajit\n",
-    "import json\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import cv2\n",
-    "print('glesLFR Import')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def ReadJsonPosesFiles(PyClassObject,PosesFilePath):\n",
-    "        with open(PosesFilePath) as PoseFile:\n",
-    "            PoseFileData = json.load(PoseFile)\n",
-    "            NoofPoses = len(PoseFileData['images'])\n",
-    "            PoseFileImagesData = PoseFileData['images']\n",
-    "            if len(PoseFileData['images']) > 0:\n",
-    "                PyClassObject.Py_allocate(len(PoseFileData['images']))\n",
-    "                for i in range (0,len(PoseFileData['images'])):\n",
-    "                    ImageName = PoseFileImagesData[i]['imagefile']\n",
-    "                    #Convert List of List to Np array\n",
-    "                    PoseMatrix = PoseFileImagesData[i]['M3x4']\n",
-    "                    PoseMatrixNumpyArray = np.array([], dtype=np.double)\n",
-    "                    for k in range(0,len(PoseMatrix)):\n",
-    "                        PoseMatrixNumpyArray = np.append(PoseMatrixNumpyArray, np.asarray(PoseMatrix[k],dtype=np.double))\n",
-    "                    PyClassObject.namespushback(ImageName)\n",
-    "                    PyClassObject.posespushback(np.array(PoseMatrixNumpyArray))\n",
-    "        return NoofPoses\n",
-    "def RenderInitialize(PyClassObject,PosesFilePath,ImageLocation,ObjModelPath,ObjModelImagePath):\n",
-    "        PyClassObject.RenderInitializeP1()\n",
-    "        NofPoses = ReadJsonPosesFiles(PyClassObject, PosesFilePath)\n",
-    "        print(NofPoses)\n",
-    "        PyClassObject.Py_LoadDemModel(ObjModelPath,ObjModelImagePath)\n",
-    "        for i in range (0,NofPoses):\n",
-    "            ImageName = PyClassObject.GetnamesIndex(i)\n",
-    "            print(ImageName)\n",
-    "            LoadImageName = ImageName.replace('.tiff','.png')\n",
-    "            Image = cv2.imread(os.path.join(ImageLocation,LoadImageName),0)\n",
-    "             # height, width, number of channels in image\n",
-    "            height = Image.shape[0]\n",
-    "            width = Image.shape[1]\n",
-    "            if len(Image.shape) == 2 :\n",
-    "                nrComponents = 1\n",
-    "            else :\n",
-    "                nrComponents = Image.shape[2]\n",
-    "            PyClassObject.LoadImageToC_8bit_1ch(Image)\n",
-    "            PyClassObject.Py_GenrateTextureID()\n",
-    "            PyClassObject.Py_BindImageWithTextureID(i,height,width,nrComponents)\n",
-    "        print('Binding Texture Successful')\n",
-    "        PyClassObject.RenderInitializeP2()\n",
-    "        print('Inititalization Finished')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PosesFilePath = '../data/T20200207F2/thermal_GPS_Corr.json'\n",
-    "ImageLocation = '../data/T20200207F2/thermal_ldr512'\n",
-    "ObjModelPath = '../data/T20200207F2/dem.obj'\n",
-    "ObjModelImagePath = '../data/T20200207F2/dem.png'\n",
-    "FocalLength = 50.815436217896945\n",
-    "PyLFClass = glesLFR_Indrajit.PyLightfieldClass(0)\n",
-    "PyLFClass.Py_setCameraFocalLength(FocalLength)\n",
-    "PyLFClass.Py_setProjectionMatrix()\n",
-    "RenderInitialize(PyLFClass,PosesFilePath,ImageLocation,ObjModelPath,ObjModelImagePath)\n",
-    "ImageReturned1 = PyLFClass.RenderImageOnce('RenderedImage1.png')\n",
-    "cv2.imwrite('Image1InMainApp.png', ImageReturned1)\n",
-    "ImageReturned2 =  PyLFClass.RenderImageOnce('RenderedImage2.png')\n",
-    "cv2.imwrite('Image2InMainApp.png', ImageReturned2)\n",
-    "PyLFClass.TerminateRendererOnceFinished()\n",
-    "#ReadJsonPosesFiles('../data/T20200207F2/thermal_GPS_Corr.json')\n",
-    "print('PY LightFieldClass generated')\n",
-    "\n",
-    "#PyLFClass = glesLFR_Indrajit.PyLightfieldClass(0)\n",
-    "#glesLFR_Indrajit.Py_PrintPyLightFieldInstanceInfo(PyLFClass)\n",
-    "#glesLFR_Indrajit.Py_Initiaterender()\n",
-    "#PyLFClass.RenderImageOnce()\n",
-    "#glesLFR_Indrajit.Py_Completerender()\n",
-    "\n",
-    "#glesLFR_Indrajit.Py_Initiaterender()\n",
-    "del(PyLFClass)\n"
-   ]
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xbzaz60pcX_p"
+      },
+      "source": [
+        "from distutils.core import setup\n",
+        "from distutils.extension import Extension\n",
+        "from Cython.Build import cythonize\n",
+        "from Cython.Distutils import build_ext\n",
+        "\n",
+        "#ext = Extension('glesLFR', sources=[\"glesLFRPyth.pyx\",\"src\\glesLFR.cpp\",\"src\\LFGenerator.cpp\",\"src\\stb_image.cpp\",\"src\\glad.c\"], language=\"c++\",)\n",
+        "\n",
+        "#setup(name=\"glesLFR\", ext_modules = cythonize([ext]),cmdclass = {'build_ext': build_ext})\n",
+        "\n",
+        "# Building\n",
+        "setup(\n",
+        "    cmdclass = {'build_ext': build_ext},\n",
+        "    ext_modules = [\n",
+        "    Extension(\"glesLFR_Indrajit\", \n",
+        "              sources=[\"glesLFR_Indrajit_Pyth.pyx\",\"glad.c\",\"stb_image.cpp\"],\n",
+        "              libraries=[\"glfw3\",\"assimp\",],\n",
+        "              language=\"c++\",\n",
+        "              extra_compile_args=[\"-Wall\",\"-Wextra\", \"-std=c++17\", \"-ggdb\", \"-lpthread\",\"-I../include/\",\"-L../lib/\",\"-llibassimp.so.5\"],\n",
+        "              extra_link_args=[\"-L../lib/\"]\n",
+        "              )\n",
+        "    ]\n",
+        ")          "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cpdXal2xcYAJ"
+      },
+      "source": [
+        "print('ProgramStarted')\n",
+        "import glesLFR_Indrajit\n",
+        "import json\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import cv2\n",
+        "print('glesLFR Import')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2aa_N3B7cYAK"
+      },
+      "source": [
+        "\n",
+        "def ReadJsonPosesFiles(PyClassObject,PosesFilePath):\n",
+        "        with open(PosesFilePath) as PoseFile:\n",
+        "            PoseFileData = json.load(PoseFile)\n",
+        "            NoofPoses = len(PoseFileData['images'])\n",
+        "            PoseFileImagesData = PoseFileData['images']\n",
+        "            if len(PoseFileData['images']) > 0:\n",
+        "                PyClassObject.Py_allocate(len(PoseFileData['images']))\n",
+        "                for i in range (0,len(PoseFileData['images'])):\n",
+        "                    ImageName = PoseFileImagesData[i]['imagefile']\n",
+        "                    #Convert List of List to Np array\n",
+        "                    PoseMatrix = PoseFileImagesData[i]['M3x4']\n",
+        "                    PoseMatrixNumpyArray = np.array([], dtype=np.double)\n",
+        "                    for k in range(0,len(PoseMatrix)):\n",
+        "                        PoseMatrixNumpyArray = np.append(PoseMatrixNumpyArray, np.asarray(PoseMatrix[k],dtype=np.double))\n",
+        "                    PyClassObject.namespushback(ImageName)\n",
+        "                    PyClassObject.posespushback(np.array(PoseMatrixNumpyArray))\n",
+        "        return NoofPoses\n",
+        "def RenderInitialize(PyClassObject,PosesFilePath,ImageLocation,ObjModelPath,ObjModelImagePath):\n",
+        "        PyClassObject.RenderInitializeP1()\n",
+        "        NofPoses = ReadJsonPosesFiles(PyClassObject, PosesFilePath)\n",
+        "        print(NofPoses)\n",
+        "        PyClassObject.Py_LoadDemModel(ObjModelPath,ObjModelImagePath)\n",
+        "        for i in range (0,NofPoses):\n",
+        "            ImageName = PyClassObject.GetnamesIndex(i)\n",
+        "            print(ImageName)\n",
+        "            LoadImageName = ImageName.replace('.tiff','.png')\n",
+        "            Image = cv2.imread(os.path.join(ImageLocation,LoadImageName),0)\n",
+        "             # height, width, number of channels in image\n",
+        "            height = Image.shape[0]\n",
+        "            width = Image.shape[1]\n",
+        "            if len(Image.shape) == 2 :\n",
+        "                nrComponents = 1\n",
+        "            else :\n",
+        "                nrComponents = Image.shape[2]\n",
+        "            PyClassObject.LoadImageToC_8bit_1ch(Image)\n",
+        "            PyClassObject.Py_GenrateTextureID()\n",
+        "            PyClassObject.Py_BindImageWithTextureID(i,height,width,nrComponents)\n",
+        "        print('Binding Texture Successful')\n",
+        "        PyClassObject.RenderInitializeP2()\n",
+        "        print('Inititalization Finished')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jGqr75D7cYAM"
+      },
+      "source": [
+        "PosesFilePath = '../data/T20200207F2/thermal_GPS_Corr.json'\n",
+        "ImageLocation = '../data/T20200207F2/thermal_ldr512'\n",
+        "ObjModelPath = '../data/T20200207F2/dem.obj'\n",
+        "ObjModelImagePath = '../data/T20200207F2/dem.png'\n",
+        "FocalLength = 50.815436217896945\n",
+        "PyLFClass = glesLFR_Indrajit.PyLightfieldClass(0)\n",
+        "PyLFClass.Py_setCameraFocalLength(FocalLength)\n",
+        "PyLFClass.Py_setProjectionMatrix()\n",
+        "RenderInitialize(PyLFClass,PosesFilePath,ImageLocation,ObjModelPath,ObjModelImagePath)\n",
+        "ImageReturned1 = PyLFClass.RenderImageOnce('RenderedImage1.png')\n",
+        "cv2.imwrite('Image1InMainApp.png', ImageReturned1)\n",
+        "ImageReturned2 =  PyLFClass.RenderImageOnce('RenderedImage2.png')\n",
+        "cv2.imwrite('Image2InMainApp.png', ImageReturned2)\n",
+        "PyLFClass.TerminateRendererOnceFinished()\n",
+        "#ReadJsonPosesFiles('../data/T20200207F2/thermal_GPS_Corr.json')\n",
+        "print('PY LightFieldClass generated')\n",
+        "\n",
+        "#PyLFClass = glesLFR_Indrajit.PyLightfieldClass(0)\n",
+        "#glesLFR_Indrajit.Py_PrintPyLightFieldInstanceInfo(PyLFClass)\n",
+        "#glesLFR_Indrajit.Py_Initiaterender()\n",
+        "#PyLFClass.RenderImageOnce()\n",
+        "#glesLFR_Indrajit.Py_Completerender()\n",
+        "\n",
+        "#glesLFR_Indrajit.Py_Initiaterender()\n",
+        "del(PyLFClass)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
