--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -20,17 +20,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xbzaz60pcX_p",
-        "outputId": "2619553f-cad3-4be6-af36-89821873bf69"
+        "outputId": "3e6443c5-c9d9-4913-994f-340780dec36a"
       },
       "source": [
-        "%run -i 'TestRendererBind_setup_Indrajit.py' build_ext --inplace       "
+        "%run -i \"TestRendererBind_setup_Indrajit.py\" build_ext --inplace       "
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "ERROR:root:File `'TestRendererBind_setup_Indrajit.py.py'` not found.\n"
+            "ERROR:root:File `'TestRendererBind_setup_Indrajit.py'` not found.\n"
           ],
           "name": "stderr"
         }
