--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -16,25 +16,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xbzaz60pcX_p",
-        "outputId": "3e6443c5-c9d9-4913-994f-340780dec36a"
+        "id": "WIT4eQH4ho8l"
       },
       "source": [
-        "%run -i \"TestRendererBind_setup_Indrajit.py\" build_ext --inplace       "
+        "!python TestRendererBind_setup_Indrajit.py build_ext --inplace"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "ERROR:root:File `'TestRendererBind_setup_Indrajit.py'` not found.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
