--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -16,7 +16,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WIT4eQH4ho8l"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WIT4eQH4ho8l",
+        "outputId": "3e801dc5-84f0-438a-bc7b-41a5fe9c3379"
+      },
+      "source": [
+        "!git clone https://github.com/indrajitkurmi/PyCLFRTryColab.git"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "python3: can't open file 'TestRendererBind_setup_Indrajit.py': [Errno 2] No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fQ5423YpiqyI"
       },
       "source": [
         "!python TestRendererBind_setup_Indrajit.py build_ext --inplace"
