--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -16,21 +16,41 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "fFD71SR-mWsb"
+      },
+      "source": [
+        "!apt update\r\n",
+        "!apt install -y cmake\r\n",
+        "!pip install dlib"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WIT4eQH4ho8l",
-        "outputId": "3e801dc5-84f0-438a-bc7b-41a5fe9c3379"
+        "outputId": "fb2cb4a7-f836-4a9f-d41e-51a02f40dc33"
       },
       "source": [
-        "!git clone https://github.com/indrajitkurmi/PyCLFRTryColab.git"
+        "!git clone https://github.com/indrajitkurmi/PyCLFRTryColab"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "python3: can't open file 'TestRendererBind_setup_Indrajit.py': [Errno 2] No such file or directory\n"
+            "Cloning into 'PyCLFRTryColab'...\n",
+            "remote: Enumerating objects: 64, done.\u001b[K\n",
+            "remote: Counting objects: 100% (64/64), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (60/60), done.\u001b[K\n",
+            "remote: Total 2331 (delta 45), reused 6 (delta 4), pack-reused 2267\u001b[K\n",
+            "Receiving objects: 100% (2331/2331), 255.12 MiB | 27.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (221/221), done.\n",
+            "Checking out files: 100% (2241/2241), done.\n"
           ],
           "name": "stdout"
         }
@@ -39,13 +59,86 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fQ5423YpiqyI"
+        "id": "6nMmfdfMjwSN",
+        "outputId": "2a878c60-8519-4319-9c66-8270859b52ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%ls\r\n",
+        "%cd PyCLFRTryColab/glesLFR/include"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34mPyCLFRTryColab\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n",
+            "/content/PyCLFRTryColab/glesLFR/src\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OaJfmdCCnkZZ"
+      },
+      "source": [
+        "!git clone https://github.com/assimp/assimp\r\n",
+        "%cd PyCLFRTryColab/glesLFR/include/assimp\r\n",
+        "!make"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GtckhOc8nnOw"
+      },
+      "source": [
+        "%cd PyCLFRTryColab/glesLFR/include\r\n",
+        "!git clone https://github.com/glfw/glfw\r\n",
+        "%cd PyCLFRTryColab/glesLFR/include/glfw\r\n",
+        "!cmake"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fQ5423YpiqyI",
+        "outputId": "312efd3c-a1d7-4b76-ac1f-10e18c8ae356"
       },
       "source": [
         "!python TestRendererBind_setup_Indrajit.py build_ext --inplace"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "running build_ext\n",
+            "skipping 'glesLFR_Indrajit_Pyth.cpp' Cython extension (up-to-date)\n",
+            "building 'glesLFR_Indrajit' extension\n",
+            "creating build/temp.linux-x86_64-3.7\n",
+            "x86_64-linux-gnu-gcc -pthread -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fdebug-prefix-map=/build/python3.7-a56wZI/python3.7-3.7.10=. -fstack-protector-strong -Wformat -Werror=format-security -g -fdebug-prefix-map=/build/python3.7-a56wZI/python3.7-3.7.10=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -I/usr/include/python3.7m -c glesLFR_Indrajit_Pyth.cpp -o build/temp.linux-x86_64-3.7/glesLFR_Indrajit_Pyth.o -Wall -Wextra -std=c++17 -ggdb -lpthread -I../include/ -L../lib/ -llibassimp.so.5\n",
+            "\u001b[01m\u001b[KglesLFR_Indrajit_Pyth.cpp:630:10:\u001b[m\u001b[K \u001b[01;31m\u001b[Kfatal error: \u001b[m\u001b[Knumpy/arrayobject.h: No such file or directory\n",
+            " #include \u001b[01;31m\u001b[K\"numpy/arrayobject.h\"\u001b[m\u001b[K\n",
+            "          \u001b[01;31m\u001b[K^~~~~~~~~~~~~~~~~~~~~\u001b[m\u001b[K\n",
+            "compilation terminated.\n",
+            "error: command 'x86_64-linux-gnu-gcc' failed with exit status 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
