--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -16,6 +16,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "najlW3aor7Tb",
+        "outputId": "64234041-ee74-4f8a-9c2a-95e2b999cda5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%cd /content/\r\n",
+        "%ls"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n",
+            "\u001b[0m\u001b[01;34mPyCLFRTryColab\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "fFD71SR-mWsb"
       },
       "source": [
@@ -38,7 +63,7 @@
       "source": [
         "!git clone https://github.com/indrajitkurmi/PyCLFRTryColab"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,16 +85,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "6nMmfdfMjwSN",
-        "outputId": "2a878c60-8519-4319-9c66-8270859b52ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2a878c60-8519-4319-9c66-8270859b52ae"
       },
       "source": [
         "%ls\r\n",
         "%cd PyCLFRTryColab/glesLFR/include"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +145,7 @@
       "source": [
         "!python TestRendererBind_setup_Indrajit.py build_ext --inplace"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
