--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -16,17 +16,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "najlW3aor7Tb",
-        "outputId": "64234041-ee74-4f8a-9c2a-95e2b999cda5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "najlW3aor7Tb",
+        "outputId": "8b919f12-e751-472b-ebf6-b579618a1f10"
       },
       "source": [
         "%cd /content/\r\n",
-        "%ls"
+        "%ls\r\n",
+        "%rmdir PyCLFRTryColab/"
       ],
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -41,15 +42,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fFD71SR-mWsb"
+        "id": "fFD71SR-mWsb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4f75852-f1d1-4d69-b7e0-eed2a8c8e3ca"
       },
       "source": [
         "!apt update\r\n",
         "!apt install -y cmake\r\n",
         "!pip install dlib"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[33m\r0% [Working]\u001b[0m\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
+            "\u001b[33m\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Waiting for headers] [Co\u001b[0m\r                                                                               \rHit:2 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
+            "\r                                                                               \rIgn:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "\u001b[33m\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Connecting to ppa.launch\u001b[0m\u001b[33m\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\u001b[0m\r                                                                               \rIgn:4 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "\u001b[33m\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\u001b[0m\r                                                                               \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "\u001b[33m\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\u001b[0m\r                                                                               \rHit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "\u001b[33m\r                                                                               \r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers]\u001b[0m\r                                                                         \rHit:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "Hit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "Get:13 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Hit:14 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Fetched 163 kB in 2s (67.0 kB/s)\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "41 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "cmake is already the newest version (3.10.2-1ubuntu2.18.04.1).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 41 not upgraded.\n",
+            "Requirement already satisfied: dlib in /usr/local/lib/python3.7/dist-packages (19.18.0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -58,24 +94,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WIT4eQH4ho8l",
-        "outputId": "fb2cb4a7-f836-4a9f-d41e-51a02f40dc33"
+        "outputId": "1e4d670f-7c28-4731-d993-b5940d73e37f"
       },
       "source": [
         "!git clone https://github.com/indrajitkurmi/PyCLFRTryColab"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'PyCLFRTryColab'...\n",
-            "remote: Enumerating objects: 64, done.\u001b[K\n",
-            "remote: Counting objects: 100% (64/64), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (60/60), done.\u001b[K\n",
-            "remote: Total 2331 (delta 45), reused 6 (delta 4), pack-reused 2267\u001b[K\n",
-            "Receiving objects: 100% (2331/2331), 255.12 MiB | 27.71 MiB/s, done.\n",
-            "Resolving deltas: 100% (221/221), done.\n",
-            "Checking out files: 100% (2241/2241), done.\n"
+            "fatal: destination path 'PyCLFRTryColab' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
