--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -20,24 +20,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "najlW3aor7Tb",
-        "outputId": "8b919f12-e751-472b-ebf6-b579618a1f10"
+        "outputId": "9c9fbad0-17b5-4fa0-9af7-4422c8c57579"
       },
       "source": [
         "%cd /content/\r\n",
-        "%ls\r\n",
-        "%rmdir PyCLFRTryColab/"
+        "%ls\r\n"
       ],
-      "execution_count": 39,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content\n",
-            "\u001b[0m\u001b[01;34mPyCLFRTryColab\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+            "\u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xa9c3g7Fs6RC"
+      },
+      "source": [
+        "#if already cloned PyCLFRTryColab is there\r\n",
+        "%rm -rf PyCLFRTryColab/"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
