--- a/glesLFR/src/TryPyCLFR_Colab.ipynb
+++ b/glesLFR/src/TryPyCLFR_Colab.ipynb
@@ -20,19 +20,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "najlW3aor7Tb",
-        "outputId": "9c9fbad0-17b5-4fa0-9af7-4422c8c57579"
+        "outputId": "beef9be8-dcd7-451f-d2ef-c53d8b23f97e"
       },
       "source": [
         "%cd /content/\r\n",
-        "%ls\r\n"
+        "%ls"
       ],
-      "execution_count": 45,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content\n",
-            "\u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
+            "\u001b[0m\u001b[01;34mPyCLFRTryColab\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
           ],
           "name": "stdout"
         }
@@ -47,104 +47,78 @@
         "#if already cloned PyCLFRTryColab is there\r\n",
         "%rm -rf PyCLFRTryColab/"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fFD71SR-mWsb",
+        "id": "P6humKkWy9JE",
+        "outputId": "20bb1e54-f394-4f05-8c44-9b96e062301d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d4f75852-f1d1-4d69-b7e0-eed2a8c8e3ca"
+        }
+      },
+      "source": [
+        "%ls"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fFD71SR-mWsb"
       },
       "source": [
         "!apt update\r\n",
         "!apt install -y cmake\r\n",
         "!pip install dlib"
       ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[33m\r0% [Working]\u001b[0m\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "\u001b[33m\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Waiting for headers] [Co\u001b[0m\r                                                                               \rHit:2 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
-            "\r                                                                               \rIgn:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "\u001b[33m\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Connecting to ppa.launch\u001b[0m\u001b[33m\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\u001b[0m\r                                                                               \rIgn:4 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "\u001b[33m\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\u001b[0m\r                                                                               \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "\u001b[33m\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\u001b[0m\r                                                                               \rHit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "\u001b[33m\r                                                                               \r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers]\u001b[0m\r                                                                         \rHit:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Get:13 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Hit:14 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Fetched 163 kB in 2s (67.0 kB/s)\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "41 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "cmake is already the newest version (3.10.2-1ubuntu2.18.04.1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 41 not upgraded.\n",
-            "Requirement already satisfied: dlib in /usr/local/lib/python3.7/dist-packages (19.18.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WIT4eQH4ho8l",
-        "outputId": "1e4d670f-7c28-4731-d993-b5940d73e37f"
+        "id": "WIT4eQH4ho8l"
       },
       "source": [
         "!git clone https://github.com/indrajitkurmi/PyCLFRTryColab"
       ],
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "fatal: destination path 'PyCLFRTryColab' already exists and is not an empty directory.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6nMmfdfMjwSN",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2a878c60-8519-4319-9c66-8270859b52ae"
+        "id": "6nMmfdfMjwSN"
       },
       "source": [
-        "%ls\r\n",
-        "%cd PyCLFRTryColab/glesLFR/include"
+        "%ls"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[01;34mPyCLFRTryColab\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n",
-            "/content/PyCLFRTryColab/glesLFR/src\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6fCY7D33tQCr"
+      },
+      "source": [
+        "%cd PyCLFRTryColab/glesLFR/lib/\r\n",
+        "%ls"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -153,8 +127,130 @@
       },
       "source": [
         "!git clone https://github.com/assimp/assimp\r\n",
-        "%cd PyCLFRTryColab/glesLFR/include/assimp\r\n",
-        "!make"
+        "%ls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NFk2lb3itYlx"
+      },
+      "source": [
+        "\r\n",
+        "%ls\r\n",
+        "%cd assimp"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A0rJderZtzpa"
+      },
+      "source": [
+        "%ls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f4xCQF5uuU4A"
+      },
+      "source": [
+        "%mkdir build"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NcsgGtWouYP4"
+      },
+      "source": [
+        "%ls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lM4Eqom1umCn"
+      },
+      "source": [
+        "%cd build/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kvwimFwTupI_"
+      },
+      "source": [
+        "!cmake .. -G 'Unix Makefiles'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_e3J26aItgth"
+      },
+      "source": [
+        "!make -j4"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G2_qbzWjxTRI"
+      },
+      "source": [
+        "%ls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bAg3MzM7xW2F"
+      },
+      "source": [
+        "%cd bin/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A8CSc9j9xaCW"
+      },
+      "source": [
+        "%ls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HGfkImGdyHkL"
+      },
+      "source": [
+        "%mv -v /content/PyCLFRTryColab/glesLFR/lib/assimp/build/bin/* /content/PyCLFRTryColab/glesLFR/lib/"
       ],
       "execution_count": null,
       "outputs": []
@@ -176,34 +272,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fQ5423YpiqyI",
-        "outputId": "312efd3c-a1d7-4b76-ac1f-10e18c8ae356"
+        "id": "fQ5423YpiqyI"
       },
       "source": [
         "!python TestRendererBind_setup_Indrajit.py build_ext --inplace"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "running build_ext\n",
-            "skipping 'glesLFR_Indrajit_Pyth.cpp' Cython extension (up-to-date)\n",
-            "building 'glesLFR_Indrajit' extension\n",
-            "creating build/temp.linux-x86_64-3.7\n",
-            "x86_64-linux-gnu-gcc -pthread -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fdebug-prefix-map=/build/python3.7-a56wZI/python3.7-3.7.10=. -fstack-protector-strong -Wformat -Werror=format-security -g -fdebug-prefix-map=/build/python3.7-a56wZI/python3.7-3.7.10=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -I/usr/include/python3.7m -c glesLFR_Indrajit_Pyth.cpp -o build/temp.linux-x86_64-3.7/glesLFR_Indrajit_Pyth.o -Wall -Wextra -std=c++17 -ggdb -lpthread -I../include/ -L../lib/ -llibassimp.so.5\n",
-            "\u001b[01m\u001b[KglesLFR_Indrajit_Pyth.cpp:630:10:\u001b[m\u001b[K \u001b[01;31m\u001b[Kfatal error: \u001b[m\u001b[Knumpy/arrayobject.h: No such file or directory\n",
-            " #include \u001b[01;31m\u001b[K\"numpy/arrayobject.h\"\u001b[m\u001b[K\n",
-            "          \u001b[01;31m\u001b[K^~~~~~~~~~~~~~~~~~~~~\u001b[m\u001b[K\n",
-            "compilation terminated.\n",
-            "error: command 'x86_64-linux-gnu-gcc' failed with exit status 1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
